Update and rename Join.md to 5. Join.md

--- a/데이터베이스/발표/5. Join.md
+++ b/데이터베이스/발표/5. Join.md
@@ -10,7 +10,7 @@
     - NoSQL 데이터베이스는 보통 정규화를 수행하지 않고, 읽기 성능을 향상시키는 경우가 많음
     - 책에서는 MongoDB의 lookup 연산이 RDBMS의 join보다 성능이 떨어진다고 함
 
-![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled.png)
+![Untitled](Join/Untitled.png)
 
 *참고) MySQL, Oracle 문법 차이
 
@@ -76,7 +76,7 @@ order by
 
 - 두 테이블의 카테시안 곱을 한 결과에서 조인 조건에 맞지 않는 결과들을 모두 제외한 값
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%201.png)
+    ![Untitled](Join/Untitled%201.png)
     
     - 실제로 카테시안 곱을 진행하지 않고서 조인 조건에 맞는 값만 반환
 - 예시
@@ -103,7 +103,7 @@ order by
 
 - 왼쪽 테이블의 값들은 모두 남겨두고 오른쪽에 있는 테이블과 조인하는 연산
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%202.png)
+    ![Untitled](Join/Untitled%202.png)
     
     - 왼쪽 테이블에서 조인 조건에 부합하는 값이 없더라도 모두 반환되며, 그 값들은  NULL 로 반환
     - 오른쪽 테이블에서 조인 조건에 부합하는 값이 없으면 제외되어 결과값 반환
@@ -132,7 +132,7 @@ order by
 
 - 오른쪽 테이블의 값들은 모두 남겨두고 왼쪽에 있는 테이블과 조인하는 연산
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%203.png)
+    ![Untitled](Join/Untitled%203.png)
     
     - 오른쪽에 있는 테이블의 값들은 조인 조건에 부합하지 않더라도 모두 반환되며, 그 값들은 NULL 로 반환
     - 왼쪽 테이블의 값들 중 조인 조건에 부합하지 않는 값들은 모두 제외되어 결과값 반환
@@ -161,7 +161,7 @@ order by
 
 - 조인조건에 부합하는 왼쪽, 오른쪽 테이블의 모든 값들을 반환함
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%204.png)
+    ![Untitled](Join/Untitled%204.png)
     
     - 만약 한쪽의 값은 조인 조건에 부합하지만 다른 한쪽은 부합하지 않는다면, 부합하지 않는 쪽의 값들은 모두 NULL 로 반환됨
 - 예시
@@ -190,7 +190,7 @@ order by
 
 - from 절에 있는 두 테이블의 카테시안 곱을 반환
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%205.png)
+    ![Untitled](Join/Untitled%205.png)
     
     - 즉, 왼쪽 테이블의 모든 row 를 오른쪽 테이블의 모든 row 와 결합하여 반환
     - 따라서 결과값의 행 개수는 `왼쪽 테이블 행 개수 * 오른쪽 테이블 행 개수`
@@ -239,7 +239,7 @@ order by
     
     *추출 버퍼는 SQL문 실행 결과를 보관하는 버퍼로, 일정 크기를 설정해서 추출 버퍼에 결과가 모두 차거나 더이상 결과가 없으면 추출 버퍼 내 결과를 사용자에게 반환
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%206.png)
+    ![Untitled](Join/Untitled%206.png)
     
     ① 선행 테이블에서 조건을 만족하는 첫 번째 행을 찾음 → 이때 선행 테이블에 주어진 조건을 만족하지 않는 경우 해당 데이터는 필터링 됨
     
@@ -272,7 +272,7 @@ order by
     - 그래서 일반적으로 CPU 작업 위주로 처리하는 Hash Join이 성능상 유리하지만, 정렬 병합 조인은 해시 조인과 달리 Non-equi 조인에 대해서도 조인이 가능함
 - 정렬 병합 조인 과정
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%207.png)
+    ![Untitled](Join/Untitled%207.png)
     
     ① 선행 테이블에서 주어진 조건을 만족하는 행을 찾음 
     
@@ -305,7 +305,7 @@ order by
     - 만약 선행 테이블의 결과를 완전히 메모리에 저장할 수 있으면 디스크에 저장하는 작업 X
 - 해시 조인 과정
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%208.png)
+    ![Untitled](Join/Untitled%208.png)
     
     ① 선행 테이블에서 주어진 조건을 만족하는 행을 찾음 
     
@@ -331,7 +331,7 @@ order by
     - 해시테이블에는 조인 키 값과 SQL에 사용한 컬럼을 모두 저장한다
 - PGA란?
     
-    ![Untitled](Join%20c9d94cba6d3040c2a10253bf348680c0/Untitled%209.png)
+    ![Untitled](Join/Untitled%209.png)
     
 
 ### 3-2. 프로브 단계
